[package]
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
description = "CLI for building and deploying NEAR smart Contracts"
edition = "2021"
keywords = ["WebAssembly", "Wasm", "wit", "WasmInterfaceTypes", "NEAR"]
license = "MIT"
name = "raen"
repository = "https://github.com/raendev/raen"
version = "0.0.1"

[dependencies]
## Wit/Wasm tools
witme = {version = "0.3.0"}
witgen = "0.12.0"
cargo-witgen = "0.13.0"

## Errors
anyhow = "1.0.51"

## CLI
clap = {version = "=3.1.8", features = ["derive", "cargo"]}
# escargot = "0.5.7"
clap-cargo = { version = "0.8.0", features = ['cargo_metadata'] }
cargo_metadata = "0.14.2"

## Utilities
once_cell = "1.10.0"
brotli = {version= "3.3.4", features = ["std"] }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = {version = "2.1.1", features = ["regex"]}
wit-parser = {version = '0.0.2', package = "aha-wit-parser"}

[workspace]
members = ["examples/*"]

[lib]
name = "raen"
path = "src/lib.rs"

[[bin]]
name = "raen"
path = "src/main.rs"
