[package]
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
description = "CLI for building and deploying NEAR smart Contracts"
edition = "2021"
keywords = ["WebAssembly", "Wasm", "wit", "WasmInterfaceTypes", "NEAR"]
license = "MIT"
name = "raen"
repository = "https://github.com/raendev/raen"
version = "0.1.1"
default-run = "raen"

[dependencies]
## Wit/Wasm tools
witme = {version = "0.3.1"}
witgen = "0.12.0"
cargo-witgen = "0.13.0"
wasm-opt = "0.110.1"

## Errors
anyhow = "1.0.51"

## CLI
clap = {version = "=3.1.8", features = ["derive", "cargo"]}
clap-cargo-extra = "0.2.0"

## Utilities
brotli = {version= "3.3.4", features = ["std"] }
bat = "0.21.0"
cargo_metadata = "0.15"
filetime = "0.2.17"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = {version = "2.1.1", features = ["regex"]}
wit-parser = {version = '0.0.2', package = "aha-wit-parser"}

[workspace]
members = ["examples/*"]

[lib]
name = "raen"
path = "src/lib.rs"

[[bin]]
name = "raen"
path = "src/main.rs"

# [patch.crates-io]
# clap-cargo-extra = {path = "../clap-cargo-extra"}
